<resources>
    <string name="app_name">PraticalCity</string>
    <string name="button_save" translatable="false">Save</string>
    <string name="edit_text_title" translatable="false">Title</string>
    <string name="edit_text_observacao" translatable="false">Note</string>
    <string name="button_notes" translatable="false">Notes</string>
    <string name="notaGuardada" translatable="false">Note Saved</string>
    <string name="notaNaoGuardada" translatable="false">Note NOT saved, try again</string>
    <string name="notaEditada" translatable="false">Note edited successfully</string>
    <string name="notaEliminada" translatable="false">Note deleted</string>
    <string name="erroEditar" translatable="false">Error editing, please try again</string>
    <string name="erroEliminar" translatable="false">Error to delete, try again</string>
    <string name="button_edit" translatable="false">Edit</string>
    <string name="button_delete" translatable="false">Delete</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="button_maps" translatable="false">Map</string>
    <string name="button_report" translatable="false">Report</string>
    <string name="edit_lembrar" translatable="false">Remember me</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="button_lista" translatable="false">List</string>
    <string name="erroLogin" translatable="false">Login fail, try again</string>
    <string name="situacoes_reportadas" translatable="false">Reported issues</string>
</resources>