<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageVieww"
        android:layout_width="326dp"
        android:layout_height="250dp"
        android:layout_margin="50dp"
        app:srcCompat="@drawable/logo1"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:minHeight="16dp"
        android:textSize="18sp"
        android:layout_below="@+id/imageVieww"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="16dp"
        android:textSize="18sp"
        android:layout_below="@+id/username"/>

    <CheckBox
        android:id="@+id/checkBox_Remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/edit_lembrar"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="155dp"
        android:layout_height="75dp"
        android:layout_below="@+id/checkBox_Remember"
        android:text="Login"
        app:backgroundTint="#5288D9"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_login"
        android:onClick="login"
        />

</RelativeLayout>