<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".situacoes">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/situacoes_reportadas"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#3F68A6"
        android:textSize="20dp">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_problema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/recyclerview_itemsituacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/textView1"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        >

        <Button
            android:id="@+id/button_vermapa"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:onClick="situacoes_mapa"
            android:text="@string/button_maps"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="14sp"
            app:backgroundTint="#5288D9"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_gps"
            />

        <Button
            android:id="@+id/button_addsituacao"
            android:layout_width="133dp"
            android:layout_height="75dp"
            android:layout_marginLeft="125dp"
            android:text="@string/button_report"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="14sp"
            app:backgroundTint="#5288D9"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_add_location"
            />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:layout_marginLeft="263dp"
            android:onClick="logout"
            android:text="Logout"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="14sp"
            app:backgroundTint="#5288D9"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_logout"
            />

    </RelativeLayout>

</RelativeLayout>